# AMQP-Message-Broker

./: BUILD.bazel  Dockerfile  README.md  WORKSPACE  main.go  updateProtos.sh
api/: BUILD.bazel  broker.pb.go  broker.proto
example/: Makefile  consumer.go  helpers.go  main.go  producer.go
protos/broker/: broker.pb.go  broker.proto
protos/consumer/: consumer.pb.go  consumer.proto
services/broker/: brokerImpl.go
services/consumer/: consumerImpl.go
services/helpers/: helpers.go
