load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "broker_proto",
    srcs = ["broker.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "broker_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/example/project/api",
    proto = ":broker_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":broker_go_proto"],
    importpath = "github.com/example/project/api",
    visibility = ["//visibility:public"],
)
